cleaning up a little bit and starting quotes

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "font": [
-        "comic sans",
+        "times new roman",
         [
             "sans",
             "nunito",
@@ -8,6 +8,13 @@
             "comic sans",
             "helvetica",
             "times new roman"
+        ]
+    ],
+    "quotes": [
+        true,
+        [
+            true,
+            false
         ]
     ]
 }
